--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>D3 Graphic</title>
-  <link rel="stylesheet" href="_/base.css">
-  <link rel="stylesheet" href="style.css">
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="flags.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <img src="FF4D00-0.0.png" class="flag flag-us" alt="" />
   <div class="container">
     <h2>Force Directed Graph of National Contiguity</h2>
-    <div id="chart"></div>
+    <div id="chart">
+    </div>
+    <!-- <img src="https://postimg.org/image/po6r5f56d/50ef0b39/" class="flag flag-cz" alt="" /> -->
   </div>
   <script src="_/d3.js"></script>
   <script src="script.js"></script>
